matchVulnerability is not a valid packageRules match selector - fix

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-
   "extends": ["config:recommended", ":dependencyDashboard"],
-
+  
   "dependencyDashboardApproval": true,
 
   "vulnerabilityAlerts": {
@@ -10,12 +9,5 @@
     "labels": ["security"]
   },
 
-  "osvVulnerabilityAlerts": true,
-
-  "packageRules": [
-    {
-      "matchVulnerability": true,
-      "labels": ["security"]
-    }
-  ]
+  "osvVulnerabilityAlerts": true
 }
